--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ tensorflow = "^2.16.1"
 keras = "^3.3.3"
 opencv-python = "^4.9.0.80"
 scipy = "^1.13.0"
+scikit-learn = "^1.4.2"
 
 
 [tool.poetry.group.dev.dependencies]
