--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ scipy = "^1.13.0"
 scikit-learn = "^1.4.2"
 tensorflow-metal = "^1.1.0"
 streamlit = "^1.34.0"
+watchdog = "^4.0.0"
+pillow = "^10.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
