--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ tensorflow-metal = "^1.1.0"
 streamlit = "^1.34.0"
 watchdog = "^4.0.0"
 pillow = "^10.3.0"
+flask = "^3.0.3"
 
 
 [tool.poetry.group.dev.dependencies]
