--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ streamlit = "^1.34.0"
 watchdog = "^4.0.0"
 pillow = "^10.3.0"
 flask = "^3.0.3"
+seaborn = "^0.13.2"
 
 
 [tool.poetry.group.dev.dependencies]
